--- a/gradle.properties
+++ b/gradle.properties
@@ -35,7 +35,7 @@ ESPRESSO_VERSION=3.2.0
 APPCOMPAT_VERSION=1.1.0
 CONSTRAINT_VERSION=1.1.3
 
-ANDROID_PROVIDER_VERSION=1.0.0.1-SNAPSHOT
+ANDROID_PROVIDER_VERSION=1.0.0
 
 # Publish config
 PUBLICATIONS_GROUPID=org.ituns.android
